--- a/journal/201904.md
+++ b/journal/201904.md
@@ -187,7 +187,24 @@ Community Organizers: The volume of Decred meetups and the number of events atte
 
 Attended:
 
-* {}
+* April 4-5 Elian attended Bitcoin Day in Argentina on April. https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15549033521645688cSgBi:matrix.org?via=decred.org&via=matrix.org
+
+April 8, Portland Meetup attracted 17 members. @raedah:decred.org, @isaacj:decred.org, and @s_ben:matrix.org all gave development updates. @isaacj:decred.org also gave an in-depth presentation on Decred: Tools, Use and Contribution. The community is growing in numbers and engagement. Everyone is excited and looking forward to the next Meetup!
+
+April 18, Coordinating Open Source: Today and Tomorrow in San Francisco, USA. The event was held at Coinbase HQ in partnership with Coinbase Custody. @lukebp spoke about Decred’s unique governance and self-funding model. There was then a moderated discussion about tradeoffs of different funding models, and Luke handled questions for over an hour. Approximately 70 people attended.
+
+April 22-26 Jalisco Talent Land in Guadalajara, Mexico. 
+
+April 24-25 Blockchain Summit in Rabat, Morocco. @arij (@butterfly in Slack) presented Decred and exhibited. Mainly students and professors from Morocco and France attended.
+
+April 25 The first Decred Chicago was organized by Jack Miller. https://www.meetup.com/Chicago-Decred-Meetup/events/260653330/
+
+April 22-28 Team members attended various events at Toronto Blockchain Week
+
+April 29 Noah Pierau and Guang Guang held an AMA for the Chinese Community https://www.chainnode.com/ama/317174 https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155655498631107nwlwp:decred.org?via=decred.org&via=matrix.org
+
+April 30 Crypto Governance  It is a matter of survival in Melbourne, Australia. There will be a panel discussion about governance and a demo of Politeia. Co-organized by Decred and Apollo Capital.
+
 
 Upcoming:
 
