--- a/journal/201904.md
+++ b/journal/201904.md
@@ -182,7 +182,7 @@ Website Updates: The architecture is set and a first draft of the copy is writte
 
 Decred in Depth Podcast: anshawblack is traveling to NYC for Blockchain Week beginning on May 11th and plans to record episodes with jy-p, muststopmurad, Joel Monegro, JZ, permabull nino, and Trey Ditto. He will then edit and trickle out the episodes over the coming weeks and months.  
 
-Community Organizers: The volume of Decred meetups and the number of events attended below highlights the success we’ve had mobilizing communities across the world. A meetup guide and tools to execute meetups will be part of the website updates. Until then, assets can be found https://github.com/decred/dcrdesign/releases. A reminder that if you would like a meetup in your neighborhood, start one! Decred community members take the lead on everything, there is no one dictating what happens where, simply community enablement. 
+Community Organizers: The volume of Decred meetups and the number of events attended below highlights the success we’ve had mobilizing communities across the world. A meetup guide and tools to execute meetups will be part of the website updates. Until then, assets can be found [link text](https://github.com/decred/dcrdesign/releases). A reminder that if you would like a meetup in your neighborhood, start one! Decred community members take the lead on everything, there is no one dictating what happens where, simply community enablement. 
 ## Events
 
 Attended:
