Added network and markets section

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -132,15 +132,14 @@ Decentralize Treasury Spending proposal attracted a lot of discussion and got fe
 
 ## Network
 
-{cross-check dcred.eu, dcrstats.com and charts.dcr.farm to get the numbers}
+Hashrate: April's hashrate opened at ~377 Ph/s and closed ~530 Ph/s, bottoming at 276 Ph/s and peaking at 676 Ph/s throughout the month. Pool hashrate distribution as of Mar 1: Poolin 20.91%, lab.antpool.com 20.12%, F2Pool 18.47%, BTC.com 10.06%,UUPool	9.08%, Luxor 2.93%, CoinMine 0.37%, beepool.org 0.09%, suprnovaa 0.04% and others 17.92% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Hashrate: April's hashrate opened at ~{} Ph/s and closed ~{} Ph/s, bottoming at {} Ph/s and peaking at {} Ph/s throughout the month. Pool hashrate distribution: {} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Staking: 30-day average ticket price was 117.22 DCR (+4.92) on May 1 per dcrstats.com.. The price varied between 105.44-127.72 DCR. Locked amount was 4.51-4.76 million DCR, which corresponded to 47.02-49.07% of the available supply.
 
-Staking: 30-day average ticket price was {} DCR (+{}) per dcrstats.com. The price varied between {}-{} DCR. Locked amount was {}-{} million DCR, which corresponded to {}-{}% of the available supply.
+Nodes: As of May 1 there were 172 public listening nodes and 68 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: v1.5.0 dev builds: 25.61% (+19.31%), v1.4.0: 44.62% (-10.38%), v1.4.0 dev and rc builds: 4.54% (-0.46%), v1.3.0: 12.39% (-4.61%), v1.2.0: 7.43% (-2.07%), v1.1.2: 2.89% (-6.61%), v1.1.0: 2.47% (+0.77%).
 
-Nodes: As of {date} there were {} public listening nodes and {} normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: {}.
+ [Update Sequence Lock Rules](https://voting.decred.org/) has passed with 99.98% approval rating. New rules will be activated on May 8th (Block 342784). Be sure to upgrade to the [latest version of decred](https://decred.org/downloads/).
 
-{any interesting analysis or events in the network}
 
 ## Mining
 
@@ -290,9 +289,9 @@ Twitter: {interesting threads}
 
 ## Markets
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+Bitcoin broke the 5000 USD barrier on April 3rd and most other crypto currencies reacted as expected there was an increase in Coin/USD rate but decrease in Coin/BTC rate. Bitcoin tested 5500 multiple times over the month, but ultimately was hovering between $5000 - $5500.  
 
-In April DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate was ${}.
+In April DCR was trading between USD 19.97-26.68 / BTC 0.0045-0.0052 as per [coinmarketcap](https://coinmarketcap.com/currencies/decred/#charts). The average daily rate was $ 24.22.
 
 ## Relevant External
 
