--- a/journal/201904.md
+++ b/journal/201904.md
@@ -228,8 +228,20 @@ The SF Meetup group will share details soon about their next event, likely to be
 {announcements from events people}
 
 ## Media
+Ditto Overview:
+  
+Staffed an introductory interview between Jake and CNBC, positioning him as a crypto expert available for commentary on industry news and trends. 
 
-{community efforts: Decred Assembly, websites, etc}
+Managed Hacker Noon interview for Jake, which we’ll post as soon as it airs on YouTube and as a podcast.
+
+Facilitated The Block interview with JZ about Decred’s experience listing on Binance. https://www.theblockcrypto.com/2019/04/17/binance-wants-crypto-projects-to-migrate-to-its-chain-from-ethereum-and-the-firms-massive-trading-business-could-help/ 
+
+Secured Pomp’s “Off the Chain” podcast for Jake, which we need to reschedule due to technical difficulties with virtual recordings.  
+
+Continued dialogue between CoinDesk and Jake around topics like governance and the DEX. They’re looking for the right news hook to write their next Decred story, and we’re keeping them abreast of the latest and greatest. 
+
+Pitched Contractor/Crypto Gig story, featuring @s_ben. Got interest from CoinDesk, CNBC and CheddarTV, who all asked for more details. Media trained @s_ben so he’ll be ready for his close-up when the time comes. Feature/evergreen stories often take a backseat as media chase “hard news,” but we’ll continue to follow-up and expand outreach.  
+
 
 * Old Decred Assembly was [uploaded](https://podcasts.apple.com/podcast/decred-assembly-1-0/id1459062074) to Apple Podcast. Thanks Ryan.
 * "Certified on Binance" {what does it mean? how did it happen? ask s_ben to comment}
