--- a/journal/201904.md
+++ b/journal/201904.md
@@ -211,7 +211,11 @@ May 2 Inaugural Lightning Developers Meetup in San Francisco, at Blockchain Capi
 
 May 4-5, Sao Paulo, https://www.bitconf.com.br/portal/. Decred is a silver sponsor and will present 5 lectures. Joao Ferreira aka girino, will present Decred and talk about governance, and Matheus Degiovani, Tiago Alves, Victor Oliveira and Rhama will present more technical lectures on LN, Politeia, Decred SimNet and POS.
 
-May 10-17 NYC Blockchain Week in New York, USA. A team of 7 Decred community members will attend events at various locations. https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15544920939119NxhFy:decred.org?via=decred.org&via=matrix.org
+May 10-17 NYC Blockchain Week in New York, USA. A team of 7 Decred community members will attend events at various locations.    Ditto has been working to make AtomicSwap (the event formerly known as BreakerCon) as successful as possible on May 15. You may have seen the news that BREAKERMAG is shutting down, so Ditto is now co-hosting this event with the top crypto outlet, The Block. 
+
+    During Blockchain Week NYC, Decred will take the main stage as Jake speaks on a panel called “The Idealist’s Dilemma,” where he’ll debate what it means to be decentralized with other project leads: Ryan Taylor of Dash, Alexander Zaidelson of Beam, and Tal Kol of Orbs. 
+
+    AtomicSwap is an all-day event featuring big names like CryptoKitties, Ledger, Nic Carter, Peter McCormack, Murad Mahmudov, etc. along with journalists who want to rub shoulders with the who’s who of crypto.   https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15544920939119NxhFy:decred.org?via=decred.org&via=matrix.org
 
 May 18 Criptolatinfest in Bogota, Colombia. Decred will have a speaking slot.
 
