--- a/journal/201904.md
+++ b/journal/201904.md
@@ -182,6 +182,7 @@ Website Updates: The architecture is set and a first draft of the copy is writte
 Decred in Depth Podcast: anshawblack is traveling to NYC for Blockchain Week beginning on May 11th and plans to record episodes with jy-p, muststopmurad, Joel Monegro, JZ, permabull nino, and Trey Ditto. He will then edit and trickle out the episodes over the coming weeks and months.  
 
 Community Organizers: The volume of Decred meetups and the number of events attended below highlights the success we’ve had mobilizing communities across the world. A meetup guide and tools to execute meetups will be part of the website updates. Until then, assets can be found [on the Github Design Repo](https://github.com/decred/dcrdesign/releases). A reminder that if you would like a meetup in your neighborhood, start one! Decred community members take the lead on everything, there is no one dictating what happens where, simply community enablement. 
+
 ## Events
 
 Attended:
@@ -238,14 +239,19 @@ Staffed an introductory interview between Jake and CNBC, positioning him as a cr
 
 Managed Hacker Noon interview for Jake, which we’ll post as soon as it airs on YouTube and as a podcast.
 
-Facilitated The Block interview with JZ about Decred’s experience listing on Binance. https://www.theblockcrypto.com/2019/04/17/binance-wants-crypto-projects-to-migrate-to-its-chain-from-ethereum-and-the-firms-massive-trading-business-could-help/ 
-
-Secured Pomp’s “Off the Chain” podcast for Jake, which we need to reschedule due to technical difficulties with virtual recordings.  
+Facilitated The Block interview with JZ about Decred’s experience listing on Binance. https://www.theblockcrypto.com/2019/04/17/binance-wants-crypto-projects-to-migrate-to-its-chain-from-ethereum-and-the-firms-massive-trading-business-could-help/  
 
 Continued dialogue between CoinDesk and Jake around topics like governance and the DEX. They’re looking for the right news hook to write their next Decred story, and we’re keeping them abreast of the latest and greatest. 
 
 Pitched Contractor/Crypto Gig story, featuring @s_ben. Got interest from CoinDesk, CNBC and CheddarTV, who all asked for more details. Media trained @s_ben so he’ll be ready for his close-up when the time comes. Feature/evergreen stories often take a backseat as media chase “hard news,” but we’ll continue to follow-up and expand outreach.  
 
+Created comprehensive Ticket-voter messaging as a tool for educating the media on how Decred’s voting system works. Solicited input from the community, with v.2 currently under review. https://pastebin.com/7SvuVyyY
+
+Researched and drafted an article discussing the true value of staking according to Decred, hint: it’s not all about the money, no matter what the media says. Draft underway, and will be shared once it’s ready for prime time.
+
+Wrote and placed a byline on the treasury proposal in InvestInBlockchain.com: https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/
+
+Worked with Matheus to draft a blogpost on the Lightning Network Testnet. This is under review with Hacker Noon, and should publish soon. 
 
 * Old Decred Assembly was [uploaded](https://podcasts.apple.com/podcast/decred-assembly-1-0/id1459062074) to Apple Podcast. Thanks Ryan.
 * "Certified on Binance" {what does it mean? how did it happen? ask s_ben to comment}
