--- a/journal/201904.md
+++ b/journal/201904.md
@@ -253,6 +253,10 @@ Wrote and placed a byline on the treasury proposal in InvestInBlockchain.com: ht
 
 Worked with Matheus to draft a blogpost on the Lightning Network Testnet. This is under review with Hacker Noon, and should publish soon. 
 
+Facilitated an AMA with Jake on r/cryptocurrency, which has  more than 869k members. Great place to spreading the Decred word! Luke passed along this opportunity, which came about from the second Meetup in SF. 
+
+Organizing a Ditto/Dustin AMA for the Decred community to ask anything about PR and marketing via Reddit, Matrix, and YouTube. Target date is mid-May (details to come!). 
+    
 * Old Decred Assembly was [uploaded](https://podcasts.apple.com/podcast/decred-assembly-1-0/id1459062074) to Apple Podcast. Thanks Ryan.
 * "Certified on Binance" {what does it mean? how did it happen? ask s_ben to comment}
 
