--- a/journal/201904.md
+++ b/journal/201904.md
@@ -215,7 +215,7 @@ May 4-5, Sao Paulo, https://www.bitconf.com.br/portal/. Decred is a silver spons
 May 10-17 NYC Blockchain Week in New York, USA. A team of 7 Decred community members will attend events at various locations.    Ditto has been working to make AtomicSwap (the event formerly known as BreakerCon) as successful as possible on May 15. You may have seen the news that BREAKERMAG is shutting down, so Ditto is now co-hosting this event with the top crypto outlet, The Block. 
 
     During Blockchain Week NYC, Decred will take the main stage as Jake speaks on a panel called “The Idealist’s Dilemma,” where he’ll debate what it means to be decentralized with other project leads: Ryan Taylor of Dash, Alexander Zaidelson of Beam, and Tal Kol of Orbs. 
-
+    
     AtomicSwap is an all-day event featuring big names like CryptoKitties, Ledger, Nic Carter, Peter McCormack, Murad Mahmudov, etc. along with journalists who want to rub shoulders with the who’s who of crypto.   https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15544920939119NxhFy:decred.org?via=decred.org&via=matrix.org
 
 May 18 Criptolatinfest in Bogota, Colombia. Decred will have a speaking slot.
@@ -234,7 +234,7 @@ The SF Meetup group will share details soon about their next event, likely to be
 
 ## Media
 Ditto Overview:
-  
+
 Staffed an introductory interview between Jake and CNBC, positioning him as a crypto expert available for commentary on industry news and trends. 
 
 Managed Hacker Noon interview for Jake, which we’ll post as soon as it airs on YouTube and as a podcast.
@@ -285,17 +285,17 @@ Audio:
 
 Community stats:
 
-* Politeia users: {} (+{})
-* Twitter followers: {} (+{})
-* Reddit subscribers: {} (+{})
-* Matrix users: {} (+{})
-* Slack users: {} (+{})
-* Discord users: {}, verified to post: {}
-* Telegram users: {} (+{})
-* YouTube subscribers: {} (+{})
+* Politeia users: 167 
+* Twitter followers: 40,456 (+147)
+* Reddit subscribers: 9,425 (+20)
+* Matrix users: 312 (+28)
+* Slack users: 6,685 (+46)
+* Discord users: {}, verified to post: {} ()
+* Telegram users: 3,668 (-374)
+* YouTube subscribers: 3,771 (+7)
 * Facebook followers: {} (+{}), likes: {} (+{})
 * LinkedIn followers: Decred page {} (+{}), Politeia page {} (+{})
-* GitHub dcrd stars: {} (+{}), forks: {} (+{})
+* GitHub dcrd stars: 486 (+7), forks: 1,285 (+28)
 
 Comm systems news:
 
