--- a/journal/201904.md
+++ b/journal/201904.md
@@ -187,23 +187,16 @@ Community Organizers: The volume of Decred meetups and the number of events atte
 
 Attended:
 
-* April 4-5 Elian attended Bitcoin Day in Argentina on April. https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15549033521645688cSgBi:matrix.org?via=decred.org&via=matrix.org
+* Apr 4-5 - [BitcoinDay Argentina](https://decredcommunity.org/events/bitcoinday-argentina) - Cordoba. @elian presented a keynote "Decred in 20 minutes" introduction to the project, and also a "How to become a Decred contractor" talk as part of the workshop. 
 
-April 8, Portland Meetup attracted 17 members. @raedah:decred.org, @isaacj:decred.org, and @s_ben:matrix.org all gave development updates. @isaacj:decred.org also gave an in-depth presentation on Decred: Tools, Use and Contribution. The community is growing in numbers and engagement. Everyone is excited and looking forward to the next Meetup!
-
-April 18, Coordinating Open Source: Today and Tomorrow in San Francisco, USA. The event was held at Coinbase HQ in partnership with Coinbase Custody. @lukebp spoke about Decred’s unique governance and self-funding model. There was then a moderated discussion about tradeoffs of different funding models, and Luke handled questions for over an hour. Approximately 70 people attended.
-
-April 22-26 Jalisco Talent Land in Guadalajara, Mexico. 
-
-April 24-25 Blockchain Summit in Rabat, Morocco. @arij (@butterfly in Slack) presented Decred and exhibited. Mainly students and professors from Morocco and France attended.
-
-April 25 The first Decred Chicago was organized by Jack Miller. https://www.meetup.com/Chicago-Decred-Meetup/events/260653330/
-
-April 22-28 Team members attended various events at Toronto Blockchain Week
-
-April 29 Noah Pierau and Guang Guang held an AMA for the Chinese Community https://www.chainnode.com/ama/317174 https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155655498631107nwlwp:decred.org?via=decred.org&via=matrix.org
-
-April 30 Crypto Governance  It is a matter of survival in Melbourne, Australia. There will be a panel discussion about governance and a demo of Politeia. Co-organized by Decred and Apollo Capital.
+* Apr 8 - [Decred: Tools, Use and Contribution](https://www.meetup.com/decredpdx/events/260098916/) - Portland, USA. 17 attendees heard @isaacj give an in depth talk on Decred tools, use and contribution, and development updates from @raedah, @isaacj and @s_ben. The community is growing in numbers and engagement. Everyone is excited and looking forward to the next Meetup!
+* Apr 18 - [Coordinating Open Source: Today and Tomorrow](https://www.meetup.com/San-Francisco-Decred-Meetup/events/260046546/) - Coinbase HQ, San Francisco, USA. The event was held at Coinbase HQ in partnership with Coinbase Custody. @lukebp spoke about Decred’s unique governance and self-funding model. There was then a moderated discussion about tradeoffs of different funding models, and Luke answered questions for over an hour. Approximately 70 people attended.
+* Apr 22-26 - Talent Land - Guadalajara, Mexico. {description and link coming soon}
+* Apr 24-25 - Blockchain Summit - Rabat, Morocco. @arij (@butterfly in Slack) presented Decred and exhibited. Mainly students and professors from Morocco and France attended.
+* Apr 25 - [Decred Chicago meetup](https://www.meetup.com/Chicago-Decred-Meetup/events/260653330/) - Chicago, USA. Jack Miller hosted the inaugural meetup in Chicago. 
+* April 22-28 Team members attended various events at Toronto Blockchain Week
+* Apr 29 - [AMA for Chinese Community](https://www.chainnode.com/ama/317174) - online. @Haon and @guang  conducted an AMA with members of the Chinese Decred community, receiving and answering over 30 questions.
+* Apr 30 - [Crypto Governance - It is a matter of survival](https://www.meetup.com/BlockchainMelbourne/events/260266298/) - Melbourne, Australia. Decred facilitated this panel [discussion](https://twitter.com/DecredAustralia/status/1123396115003392000) about crypto governance. 
 
 
 Upcoming:
@@ -290,7 +283,7 @@ Community stats:
 * Reddit subscribers: 9,425 (+20)
 * Matrix users: 312 (+28)
 * Slack users: 6,685 (+46)
-* Discord users: {}, verified to post: {} ()
+* Discord users: 2194 (+70), Verified to Post: 199 (+38)
 * Telegram users: 3,668 (-374)
 * YouTube subscribers: 3,771 (+7)
 * Facebook followers: {} (+{}), likes: {} (+{})
