dev politeia and dcrdata paras

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -53,12 +53,7 @@ Starged work:
 
 {}
 
-[Politeia](https://github.com/decred/politeia):
-
-
-
-
-* Performance boost merged, long in the works, lots of testing https://twitter.com/marco_peereboom/status/1120398754216062978
+[Politeia](https://github.com/decred/politeia): An upgrade was [deployed](https://twitter.com/marco_peereboom/status/1120398754216062978) on the live proposals site which brings significant performance improvements, adds a diff viewer to the proposal version history viewer drop-down, and changes the default ordering of comments to show top scoring comments first. The Contractor Management System is ready for use and will be used by contractors to submit their invoices for April.
 
 [dcrandroid](https://github.com/decred/dcrandroid): 
 
@@ -76,15 +71,7 @@ Dcrios beta saw continued testing by community members and refinements. Only a f
 
 Trezor: {}
 
-[dcrdata](https://github.com/decred/dcrdata):
-
-Merged:
-
-* live politeia vote charts {huge!} https://github.com/decred/dcrdata/pull/1210
-  * https://twitter.com/RichardRed0x/status/1119364265541099520
-* live consensus vote tracking https://github.com/decred/dcrdata/pull/1125
-* faster chart updates https://github.com/decred/dcrdata/pull/1126
-* dev: module graph https://github.com/decred/dcrdata/pull/1215
+[dcrdata](https://github.com/decred/dcrdata) v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [vote tracking](https://explorer.dcrdata.org/agendas) for live on-chain consensus rules change proposals, along with a number of performance improvements and minor fixes. Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added and iterated on the [alpha.explorer.org](https://alpha.dcrdata.org/proposals) site. 
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
 
