Upgrade your nodes

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -13,7 +13,7 @@
 
 ## Upgrade your nodes!
 
-Old nodes will be forked off the network when {simple explanation}.
+Following the successful consensus rule change [vote](https://voting.decred.org/) to update sequence lock rules, the rule change will activate in block 342,785 (~9 May). Once someone makes a transaction that only works because of the rule change, any nodes that are still following the old rules (i.e. any software version before v1.4.0) will cease following the legitimate Decred chain. It is therefore important that all nodes (miners, voters, users, merchants, service providers) upgrade their Decred software to v1.4.0 before May 9. 
 
 ## Development
 
