Events section, upcoming events formatting

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -88,8 +88,6 @@ Congratulations to 5 contractors listed on decred.org:
 
 The  [consensus vote](https://voting.decred.org/) to implement DCP0004 completed on Apr 11 with almost 100% approval and 54.5% of tickets actively participating by voting Yes. The new rules will activate on Apr 9, see note above about upgrading node software.
 
-**Treasury funds update**
-
 In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,460 DCR and spent 13,943 DCR. Using April's daily average DCR/USD rate of $24.22, this is $374K received and $338K spent. As these payments were for work completed in March, it is also informative to consider them in the context of the March average daily rate of $18.14 - in which case the USD received/spent figures are $280K/$253K. As of Apr 3, Treasury balance is 608,069 DCR (16 million USD at $26.20).
 
 Proposal status as of {}:
@@ -165,10 +163,9 @@ Community Organizers: The volume of Decred meetups and the number of events atte
 Attended:
 
 * Apr 4-5 - [BitcoinDay Argentina](https://decredcommunity.org/events/bitcoinday-argentina) - Cordoba. @elian presented a keynote "Decred in 20 minutes" introduction to the project, and also a "How to become a Decred contractor" talk as part of the workshop. 
-
 * Apr 8 - [Decred: Tools, Use and Contribution](https://www.meetup.com/decredpdx/events/260098916/) - Portland, USA. 17 attendees heard @isaacj give an in depth talk on Decred tools, use and contribution, and development updates from @raedah, @isaacj and @s_ben. The community is growing in numbers and engagement. Everyone is excited and looking forward to the next Meetup!
 * Apr 18 - [Coordinating Open Source: Today and Tomorrow](https://www.meetup.com/San-Francisco-Decred-Meetup/events/260046546/) - Coinbase HQ, San Francisco, USA. The event was held at Coinbase HQ in partnership with Coinbase Custody. @lukebp spoke about Decred’s unique governance and self-funding model. There was then a moderated discussion about tradeoffs of different funding models, and Luke answered questions for over an hour. Approximately 70 people attended.
-* Apr 22-26 - Talent Land - Guadalajara, Mexico. {description and link coming soon}
+* Apr 22-26 - Talent Land - Guadalajara, Mexico. @elian provided a [summary](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155690701035573YcsMH:matrix.org?via=decred.org&via=matrix.org) of the event and Decred's participation. The event was attended by over 60,000 people, and Decred was the only major cryptocurrency represented in 'Blockchain Land'. A talk titled “Decred: el dinero del futuro” was attended by around 35 people, and hundreds more stopped by to talk to the Decred representatives at the booth. Attendees responded well to the "idea of be your own bank", and also the concept of Decred as self-funding open source software production.
 * Apr 24-25 - Blockchain Summit - Rabat, Morocco. @arij (@butterfly in Slack) presented Decred and exhibited. Mainly students and professors from Morocco and France attended.
 * Apr 25 - [Decred Chicago meetup](https://www.meetup.com/Chicago-Decred-Meetup/events/260653330/) - Chicago, USA. Jack Miller hosted the inaugural meetup in Chicago. 
 * Apr 29 - [AMA for Chinese Community](https://www.chainnode.com/ama/317174) - online. @Haon and @guang  conducted an AMA with members of the Chinese Decred community, receiving and answering over 30 questions.
@@ -177,29 +174,25 @@ Attended:
 
 Upcoming:
 
-May 2 Inaugural Lightning Developers Meetup in San Francisco, at Blockchain Capital, Decred will be in attendance.
+* May 2 - [Inaugural Lightning Developers Meetup](https://twitter.com/sparkswap/status/1121161593490792448) -  Blockchain Capital, San Francisco USA. Decred will be in attendance.
 
-May 4-5, Sao Paulo, https://www.bitconf.com.br/portal/. Decred is a silver sponsor and will present 5 lectures. Joao Ferreira aka girino, will present Decred and talk about governance, and Matheus Degiovani, Tiago Alves, Victor Oliveira and Rhama will present more technical lectures on LN, Politeia, Decred SimNet and POS.
-
-May 10-17 NYC Blockchain Week in New York, USA. A team of 7 Decred community members will attend events at various locations.    Ditto has been working to make AtomicSwap (the event formerly known as BreakerCon) as successful as possible on May 15. You may have seen the news that BREAKERMAG is shutting down, so Ditto is now co-hosting this event with the top crypto outlet, The Block. 
+* May 4-5 - [Bitconf](https://www.bitconf.com.br/portal/.) - Sao Paulo, Brazil. Decred is a silver sponsor and will present 5 lectures. Joao Ferreira aka girino, will present Decred and talk about governance, and Matheus Degiovani, Tiago Alves, Victor Oliveira and Rhama will present more technical lectures on LN, Politeia, Decred SimNet and POS.
+* May 10-17 - NYC Blockchain Week - New York, USA. A team of 7 Decred community members will attend events at various locations. Ditto has been working to make [AtomicSwap](https://twitter.com/TheBlock__/status/1123339626616360962) (the event formerly known as BreakerCon) as successful as possible on May 15. You may have seen the [news](https://twitter.com/BreakerMag/status/1123259686516592642) that BREAKERMAG is shutting down, so Ditto is now co-hosting this event with the top crypto outlet, The Block. 
 
     During Blockchain Week NYC, Decred will take the main stage as Jake speaks on a panel called “The Idealist’s Dilemma,” where he’ll debate what it means to be decentralized with other project leads: Ryan Taylor of Dash, Alexander Zaidelson of Beam, and Tal Kol of Orbs. 
-    
-    AtomicSwap is an all-day event featuring big names like CryptoKitties, Ledger, Nic Carter, Peter McCormack, Murad Mahmudov, etc. along with journalists who want to rub shoulders with the who’s who of crypto.   https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15544920939119NxhFy:decred.org?via=decred.org&via=matrix.org
 
-May 18 Criptolatinfest in Bogota, Colombia. Decred will have a speaking slot.
+* May 18 - [Criptolatinfest](https://criptolatinfest.com/) - Bogota, Colombia. Decred will have a speaking slot.
 
-May 20-21 Elian will travel to Colombia to give a keynote on governance at La Conexion, connecting South America to Asia. https://www.la-conexion.com/
+* May 20-21 - [La Conexion]( https://www.la-conexion.com/) - Melellin, Colombia. @elian will give a keynote on governance.
 
-June 5 Decred Meetup in Berlin, Germany. @jholdstock will present an overview of Decred and Philipp Banhardt of BlueYard will discuss their investment thesis. Hosted by BlueYard https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15544857098891TMRai:decred.org?via=decred.org&via=matrix.org Capital.https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15544920939119NxhFy:decred.org?via=decred.org&via=matrix.org 
+* June 5 - Decred Meetup - Berlin, Germany. @jholdstock will present an overview of Decred and Philipp Banhardt of BlueYard will discuss their investment thesis. Hosted by BlueYard 
+* June 19-23 - [Campus Party Brasil](https://brasil.campus-party.org/campus-party-brasilia/) - Brasilia, Brazil. Decred [will](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15568861633013AEoGy:decred.org?via=decred.org&via=matrix.org) be well represented, as it always is at Campus Party.
 
-Early June, date TBD Decred meetup NYC, being launched by Cole Kennelly of Staked. Planning the first three events though the Summer, then will involve Decred in events that incorporate the wider ecosystem
+* Early June, date TBD - Decred meetup NYC, being launched by Cole Kennelly of Staked. Planning the first three events though the Summer, then will involve Decred in events that incorporate the wider ecosystem
 
-Early June TBD, Washington, DC/Northern Virginia. Akin Sawyerr is organizing an event titled, “Understanding Blockchain Through the Eyes of Decred.”
+* Early June TBD - Washington, DC/Northern Virginia. Akin Sawyerr is organizing an event titled, “Understanding Blockchain Through the Eyes of Decred.”
 
-The SF Meetup group will share details soon about their next event, likely to be held in early June. The working topic is Lightning Network.
-
-{announcements from events people}
+* The SF Meetup group will share details soon about their next event, likely to be held in early June. The working topic is Lightning Network.
 
 ## Media
 Ditto Overview:
