--- a/journal/201904.md
+++ b/journal/201904.md
@@ -186,11 +186,12 @@ Upcoming:
 * May 20-21 - [La Conexion]( https://www.la-conexion.com/) - Melellin, Colombia. @elian will give a keynote on governance.
 
 * June 5 - Decred Meetup - Berlin, Germany. @jholdstock will present an overview of Decred and Philipp Banhardt of BlueYard will discuss their investment thesis. Hosted by BlueYard 
+
+* June 16 - Washington, DC/Northern Virginia. Akin Sawyerr is organizing an event titled, “Understanding Blockchain Through the Eyes of Decred.” 
+
 * June 19-23 - [Campus Party Brasil](https://brasil.campus-party.org/campus-party-brasilia/) - Brasilia, Brazil. Decred [will](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15568861633013AEoGy:decred.org?via=decred.org&via=matrix.org) be well represented, as it always is at Campus Party.
 
 * Early June, date TBD - Decred meetup NYC, being launched by Cole Kennelly of Staked. Planning the first three events though the Summer, then will involve Decred in events that incorporate the wider ecosystem
-
-* Early June TBD - Washington, DC/Northern Virginia. Akin Sawyerr is organizing an event titled, “Understanding Blockchain Through the Eyes of Decred.”
 
 * The SF Meetup group will share details soon about their next event, likely to be held in early June. The working topic is Lightning Network.
 
