--- a/journal/201904.md
+++ b/journal/201904.md
@@ -177,6 +177,7 @@ Upcoming:
 * May 2 - [Inaugural Lightning Developers Meetup](https://twitter.com/sparkswap/status/1121161593490792448) -  Blockchain Capital, San Francisco USA. Decred will be in attendance.
 
 * May 4-5 - [Bitconf](https://www.bitconf.com.br/portal/.) - Sao Paulo, Brazil. Decred is a silver sponsor and will present 5 lectures. Joao Ferreira aka girino, will present Decred and talk about governance, and Matheus Degiovani, Tiago Alves, Victor Oliveira and Rhama will present more technical lectures on LN, Politeia, Decred SimNet and POS.
+
 * May 10-17 - NYC Blockchain Week - New York, USA. A team of 7 Decred community members will attend events at various locations. Ditto has been working to make [AtomicSwap](https://twitter.com/TheBlock__/status/1123339626616360962) (the event formerly known as BreakerCon) as successful as possible on May 15. You may have seen the [news](https://twitter.com/BreakerMag/status/1123259686516592642) that BREAKERMAG is shutting down, so Ditto is now co-hosting this event with the top crypto outlet, The Block. 
 
     During Blockchain Week NYC, Decred will take the main stage as Jake speaks on a panel called “The Idealist’s Dilemma,” where he’ll debate what it means to be decentralized with other project leads: Ryan Taylor of Dash, Alexander Zaidelson of Beam, and Tal Kol of Orbs. 
@@ -196,29 +197,19 @@ Upcoming:
 * The SF Meetup group will share details soon about their next event, likely to be held in early June. The working topic is Lightning Network.
 
 ## Media
-Ditto Overview:
+Ditto Overview: 
 
-Staffed an introductory interview between Jake and CNBC, positioning him as a crypto expert available for commentary on industry news and trends. 
+JZ spoke with The Block about Decred’s experience listing on Binance. https://www.theblockcrypto.com/2019/04/17/binance-wants-crypto-projects-to-migrate-to-its-chain-from-ethereum-and-the-firms-massive-trading-business-could-help/  
 
-Managed Hacker Noon interview for Jake, which we’ll post as soon as it airs on YouTube and as a podcast.
+Ticket-voter messaging as a tool for educating people on how Decred’s voting system works was created. Input from the community was incorporated, with v.2 currently under review. https://pastebin.com/7SvuVyyY
 
-Facilitated The Block interview with JZ about Decred’s experience listing on Binance. https://www.theblockcrypto.com/2019/04/17/binance-wants-crypto-projects-to-migrate-to-its-chain-from-ethereum-and-the-firms-massive-trading-business-could-help/  
+An article on the treasury proposal appeared in InvestInBlockchain.com: https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/
 
-Continued dialogue between CoinDesk and Jake around topics like governance and the DEX. They’re looking for the right news hook to write their next Decred story, and we’re keeping them abreast of the latest and greatest. 
+Matheusd drafted a blogpost on the Lightning Network Testnet on Medium and it was published on HackerNoon https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e 
 
-Pitched Contractor/Crypto Gig story, featuring @s_ben. Got interest from CoinDesk, CNBC and CheddarTV, who all asked for more details. Media trained @s_ben so he’ll be ready for his close-up when the time comes. Feature/evergreen stories often take a backseat as media chase “hard news,” but we’ll continue to follow-up and expand outreach.  
+AMA with Jake happened on r/cryptocurrency, which has  more than 869k members. Luke generated this opportunity when he presented at Coinbase at second Meetup in SF. https://old.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/
 
-Created comprehensive Ticket-voter messaging as a tool for educating the media on how Decred’s voting system works. Solicited input from the community, with v.2 currently under review. https://pastebin.com/7SvuVyyY
-
-Researched and drafted an article discussing the true value of staking according to Decred, hint: it’s not all about the money, no matter what the media says. Draft underway, and will be shared once it’s ready for prime time.
-
-Wrote and placed a byline on the treasury proposal in InvestInBlockchain.com: https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/
-
-Worked with Matheus to draft a blogpost on the Lightning Network Testnet. This is under review with Hacker Noon, and should publish soon. 
-
-Facilitated an AMA with Jake on r/cryptocurrency, which has  more than 869k members. Great place to spreading the Decred word! Luke passed along this opportunity, which came about from the second Meetup in SF. 
-
-Organizing a Ditto/Dustin AMA for the Decred community to ask anything about PR and marketing via Reddit, Matrix, and YouTube. Target date is mid-May (details to come!). 
+Ditto/Dustin will have an AMA for the Decred community to ask anything about PR and marketing via Reddit, Matrix, and YouTube. Target date is May 17th at Noon EST. 
     
 * Old Decred Assembly was [uploaded](https://podcasts.apple.com/podcast/decred-assembly-1-0/id1459062074) to Apple Podcast. Thanks Ryan.
 * "Certified on Binance" {what does it mean? how did it happen? ask s_ben to comment}
