--- a/journal/201904.md
+++ b/journal/201904.md
@@ -188,7 +188,7 @@ Upcoming:
 
 * June 5 - Decred Meetup - Berlin, Germany. @jholdstock will present an overview of Decred and Philipp Banhardt of BlueYard will discuss their investment thesis. Hosted by BlueYard 
 
-* June 16 - Washington, DC/Northern Virginia. Akin Sawyerr is organizing an event titled, “Understanding Blockchain Through the Eyes of Decred.” 
+* June 16 - Washington, DC/Northern Virginia. Akin Sawyerr is organizing an event titled, “Understanding Blockchain Through the Eyes of Decred.” https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/
 
 * June 19-23 - [Campus Party Brasil](https://brasil.campus-party.org/campus-party-brasilia/) - Brasilia, Brazil. Decred [will](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15568861633013AEoGy:decred.org?via=decred.org&via=matrix.org) be well represented, as it always is at Campus Party.
 
