finished rel ext, minor polish elsewhere

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -257,8 +257,8 @@ Community stats (snapshot taken Apr 2 01:00 UTC):
 
 Comm systems news:
 
-* Servers hosting matrix.org and riot.im compromised and taken down on Apr 11 for emergency security maintenance, disrupting our communications for several hours. If your homeserver is matrix.org, change your password. Incident report [here](https://matrix.org/blog/2019/04/11/security-incident/), tweet timeline [here](https://twitter.com/matrixdotorg/status/1116304867683905537), and [here](https://github.com/matrix-org/matrix.org/issues/371) are recommendations from the hacker to the admins. Decred's homeserver (matrix.decred.org) was not affected. {clarify with admins}. A good moment to say thanks to our admins who work every day to keep a lot of self-hosted infrastructure running. The incident disrupted our comms for many hours because many people are using the browser Riot.im client which was taken offline. To be resilient against such issues, users should consider installing standalone client (desktop or mobile). Another idea is to [self-host Riot](https://github.com/xaur/decred-issues/issues/62).
-* There were multiple interruptions in the bridge with lots of messages were not delivered across the bridge.
+* Servers hosting matrix.org and riot.im were compromised and taken down on Apr 11 for emergency security maintenance, disrupting our communications for several hours. If your homeserver is matrix.org, change your password. Incident report [here](https://matrix.org/blog/2019/04/11/security-incident/), tweet timeline [here](https://twitter.com/matrixdotorg/status/1116304867683905537), and [here](https://github.com/matrix-org/matrix.org/issues/371) are recommendations from the hacker to the admins. Decred's homeserver (matrix.decred.org) was not affected. {clarify with admins}. A good moment to say thanks to our admins who work every day to keep a lot of self-hosted infrastructure running. The incident disrupted our comms for many hours because many people are using the browser Riot.im client which was taken offline. To be resilient against such issues, users should consider installing standalone client (desktop or mobile). Another idea is to [self-host Riot](https://github.com/xaur/decred-issues/issues/62).
+* There were multiple interruptions in the bridge and many messages were not delivered across the bridge.
 * Matrix is moving to stop supporting self-signed certificates and rely on Certificate Authorities to behave.
 * {someone please comment on how Telegram groups evolve and what interesting is going on}
 * Trivia: did you know there are [12 mods](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) in the Telegram group? {accurate info?}
@@ -267,13 +267,11 @@ Comm systems news:
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
-Selected reddit discussions: [Decred wants you: Be one of the first to test the DCR Lightning Network](https://www.reddit.com/r/decred/comments/bhjfty/decred_wants_you_be_one_of_the_first_to_test_the/), 
+Selected reddit discussions: [Decred wants you: Be one of the first to test the DCR Lightning Network](https://www.reddit.com/r/decred/comments/bhjfty/decred_wants_you_be_one_of_the_first_to_test_the/), [Does 48% of coins locked in staking result in lower volatility?](https://www.reddit.com/r/decred/comments/bh1erw/decred_has_48_of_coins_lockedup_in_staking/), [Calculation of annualized Decred staking yields: much better than buying Muni Bonds or US Treasury Bills](https://www.reddit.com/r/decred/comments/bg51sb/calculation_of_annualized_decred_staking_yields/)
 
-Selected tweets: @coinbase [tweeting](https://twitter.com/coinbase/status/1116086283468722181) the Decred presentation by @lukebp, 
+@jy-p did an [AMA](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on /r/cryptocurrency on May 2
 
-
-
-[Decred dev Luke Powell presenting at Coinbase](<>), [Decred as a Bitcoin hedge](https://twitter.com/pascaltmn/status/1120006806397489159), https://twitter.com/hackernoon/status/1123648279458217985, 
+Selected tweets: @coinbase [tweeting](https://twitter.com/coinbase/status/1116086283468722181) the Decred presentation by @lukebp, @pascaltmn [tweeting](https://twitter.com/pascaltmn/status/1120006806397489159) about Decred as a Bitcoin hedge, @hackernoon [tweeting](https://twitter.com/hackernoon/status/1123648279458217985) about @matheusd's Lightning post.
 
 ## Markets
 
@@ -282,10 +280,6 @@ Bitcoin broke the 5000 USD barrier on April 3rd and most other crypto currencies
 In April DCR was trading between USD 19.97-26.68 / BTC 0.0045-0.0052 as per [coinmarketcap](https://coinmarketcap.com/currencies/decred/#charts). The average daily rate was $ 24.22.
 
 ## Relevant External
-
-{PoW, ASIC resistance, tech}
-
-{governance, funding, forks, chain splits, controversy}
 
 @richard-red has collected and [shared](https://github.com/RichardRed0x/crypto-governance-research/tree/master/governance-proposals) comprehensive proposal voting data-sets for Decred, Dash and Aragon, and [tweeted](https://twitter.com/RichardRed0x/status/1114552602237313024) some basic statistics like average voter participation for each project. At the time of writing (Apr 6), based on proposals that had finished voting, Decred had an average ticket participation of 76% for on chain votes and 31% for Politeia proposals; Dash had an average masternode participation of 19% in its Treasury proposals; Aragon had an average ANT token participation of 4.5% in voting on Aragon Governance Proposals.
 
@@ -305,34 +299,23 @@ The Zcash Foundation [announced](https://www.zfnd.org/blog/kzen-multisig/) fundi
 
 Zcoin [announced](https://zcoin.io/further-disclosure-on-zerocoin-vulnerability/) a vulnerability with the Zerocoin protocol that allowed forged coins to be created ("not exceeding 1% of the circulating supply"). Details are to be released later, once other projects exposed to a flaw with the cryptography of Zerocoin (PIVX, Veil and Gravity Coin) have had a chance to mitigate the issue. The Zcoin team called for Zerocoin spends to be disabled on Apr 9 when they detected the issue, and in this post on Apr 26 confirmed that it will remain disabled for Zcoin as they are working on a replacement (Sigma) which is nearly ready.
 
-Switzerland e-voting fail now all e-voting is bad https://www.schneier.com/blog/archives/2019/03/critical_flaw_i.html https://boingboing.net/2019/03/13/principal-agent-problems.html
-
-ZRX Treasury stuff
-
-* https://twitter.com/0xProject/status/1116400317191475200
-* https://blog.0xproject.com/0x-roadmap-2019-part-4-proposal-for-stake-based-liquidity-incentive-52c16558df29
-
-{DEX}
-
-{related exchanges and websites}
-
-Tether [updated](https://news.bitcoin.com/while-tether-withdraws-claim-of-usd-backing-rival-stablecoins-provide-monthly-attestations/) their terms on [Feb 26](https://archive.today/yw7nb), adding that it may now back USDT by assets other than USD and delay the redemption or withdrawal because of poor liquidity or unavailability of the assets.
+In [part 4](https://blog.0xproject.com/0x-roadmap-2019-part-4-proposal-for-stake-based-liquidity-incentive-52c16558df29) of the 0x Roadmap [ZEIP-31](https://github.com/0xProject/ZEIPs/issues/31) was proposed, which would add incentives for market makers to hold the ZRX token. This is in response to a lack of correlation between users of 0x and ZRX token holders. ZRX is designed to be used to govern the protocol, which is unlikely to work well in a scenario where the main users do not hold any ZRX. The proposal is at the start of a long process to develop and audit the new smart contracts then hold a tokenholder vote to approve/reject the integration of the changes. 
 
 Couple of exchanges joined delisting war to delist bitcoinSV - https://www.coindesk.com/kraken-exchange-joins-binance-shapeshift-in-delisting-bitcoin-sv
 
-QuadrigaCX declared bankrupt after months of uncertainty https://cointelegraph.com/news/canadian-crypto-exchange-quadrigacx-officially-declared-bankrupt
+Bitfinex encountered some [trouble](https://bitcoinmagazine.com/articles/bitfinex-faces-legal-action-from-ny-attorney-general-heres-what-this-means/) from the New York Attorney General's office, in the form of a request for a court order to investigate transactions between certain legal entities relating to Bitfinex and Tether. Specifically, the NY AG alleges that Bitfinex lost some $850 million held by Crypto Capital (they claim it has been frozen), and borrowed from Tether reserves in order to keep Bitfinex operational. Tether [updated](https://news.bitcoin.com/while-tether-withdraws-claim-of-usd-backing-rival-stablecoins-provide-monthly-attestations/) their terms on [Feb 26](https://archive.today/yw7nb), adding that it may now back USDT by assets other than USD and delay the redemption or withdrawal because of poor liquidity or unavailability of the assets.
 
-Bitfinex tether NY AG - worth covering?
+QuadrigaCX declared [bankrupt](https://cointelegraph.com/news/canadian-crypto-exchange-quadrigacx-officially-declared-bankrupt) after months of uncertainty.
 
-{other: regulations, security, fun}
+A critical flaw was [discovered](https://motherboard.vice.com/en_us/article/zmakk3/researchers-find-critical-backdoor-in-swiss-online-voting-system) in Switzerland's Internet Voting System (missed from March), which is scheduled to be used in elections this year. The flaw would allow someone to alter votes undetected. Cory Doctorow [wrote](https://boingboing.net/2019/03/13/principal-agent-problems.html) about this as exposing issues with internet voting around the auditing process and NDAs which cover code and silence criticizm from security researchers.
 
-anti-anonymity is the main aim https://cointelegraph.com/news/g20-to-establish-crypto-aml-and-counter-terrorism-financing-regulations-in-june-report
+The G20 members will [meet](https://cointelegraph.com/news/g20-to-establish-crypto-aml-and-counter-terrorism-financing-regulations-in-june-report) in Japan in June and plan to agree on a framework to combat crypto-enabled money laundering and terrorism financing - with the main aim being anti-anonymity and the identification of individuals transacting in crypto-assets at the moment of transaction.
 
-https://gadgets.ndtv.com/laptops/news/intel-visa-sa-00086-exploit-researchers-computer-data-access-2014854
+Researchers have [shown](https://gadgets.ndtv.com/laptops/news/intel-visa-sa-00086-exploit-researchers-computer-data-access-2014854) that a testing utility bundled with intel chips (Intel VISA) can allow an attacker to capture data from the CPU.
 
-Former Mozilla exec [accused](https://www.zdnet.com/article/former-mozilla-exec-google-has-sabotaged-firefox-for-years/) Google for sabotaging Firefox for years.
+Former Mozilla exec [accuses](https://www.zdnet.com/article/former-mozilla-exec-google-has-sabotaged-firefox-for-years/) Google of sabotaging Firefox for years - through a long series of "mistakes" which led Google products to have issues on Firefox browser.
 
-When it comes to privacy, New York Times has a good [sense of humor](https://twitter.com/Pinboard/status/1116354502032932865).
+When it comes to privacy, New York Times has a good [sense of humor](https://twitter.com/Pinboard/status/1116354502032932865) - stuffing the "Privacy Project" homepage to the gills with third-party tracking scripts.
 
 ## About This Issue
 
