--- a/journal/201904.md
+++ b/journal/201904.md
@@ -2,14 +2,15 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-{introduction, major news of the month
+April saw the launch of Lightning Network on Decred's testnet, this is a great time to [check it out](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e), do some testing, and start building on DCR LN. 
 
-* LN beta
-* CV passed and locked in on Apr 11, est. activation date
-* Politeia speedup
-* collective writing of DJ
+LN will become available on mainnet when DCP0004 activates in block 342,785 (~ May 9), but it will take time to build up the network and work out the kinks. Use of DCR LN should for now be considered experimental and not involve large sums of DCR. Testnet is where the LN action will happen for some time.
 
-}
+Once a transaction is mined which relies on DCP0004 changes to be considered valid, any nodes running older Decred software (pre v1.4.0) will reject this block and be forked off the Decred chain. For this reason it is important to **upgrade your nodes - don't be forked off the network on May 9!**
+
+Politeia software saw a significant round of performance improvements and new features (like diff viewing for proposal versions) deployed on the live proposals site. The contractor management system is ready to go in a basic form and will be used for collecting and processing contractor invoices in April.
+
+This month's edition of Decred Journal has been a more decentralized production than usual, with @bee stepping back from the pivotal role they have played thus far (but keeping a steady supply of notes coming) and other contributors doing a bit more than they usually would.
 
 ## Upgrade your nodes!
 
